# psindra.github.io

./: .gitignore  index.html  nexo.html  prueba_tabla_js.html
AI Detection/: genderapi.io_name
Authenticator/: auth-calc.html  auth.html  (+4 more)
Practicas_Programacion/JavaScript/NodeJS/NODEJS-MOBILE/NodeJS-Mobile-Sample/nodejs-mobile-sample-upgraded-master/app/: CMakeLists.txt  build.gradle
Practicas_Programacion/JavaScript/NodeJS/NODEJS-MOBILE/NodeJS-Mobile-Sample/nodejs-mobile-sample-upgraded-master/app/libnode/include/node/: common.gypi  new.xml
Practicas_Programacion/JavaScript/NodeJS/NODEJS-MOBILE/NodeJS-Mobile-Sample/nodejs-mobile-sample-upgraded-master/app/src/main/: AndroidManifest.xml
Practicas_Programacion/JavaScript/NodeJS/NODEJS-MOBILE/NodeJS-Mobile-Sample/nodejs-mobile-sample-upgraded-master/app/src/main/assets/inicio/: index.html
Practicas_Programacion/JavaScript/NodeJS/NODEJS-MOBILE/NodeJS-Mobile-Sample/nodejs-mobile-sample-upgraded-master/app/src/main/assets/nodejs-project/: lista_assets_local.txt  package-lock.json  package.json
Practicas_Programacion/JavaScript/NodeJS/NODEJS-MOBILE/NodeJS-Mobile-Sample/nodejs-mobile-sample-upgraded-master/app/src/main/assets/nodejs-project/src/: _____index copy.js  index.js
Practicas_Programacion/JavaScript/NodeJS/NODEJS-MOBILE/NodeJS-Mobile-Sample/nodejs-mobile-sample-upgraded-master/app/src/main/res/layout/: activity_main.xml  activity_webview.xml
Practicas_Programacion/JavaScript/NodeJS/NODEJS-MOBILE/NodeJS-Mobile-Sample/nodejs-mobile-sample-upgraded-master/app/src/main/res/values/: strings.xml  styles.xml
(+386 files in other folders)
